# stormworks-tacview

./: .gitignore  Cargo.toml  README.md  client.ts  index.ts  indexOld.ts  newTest.ts  steam.ts  stormworks.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  tag-release.yml
ci/: Cargo.toml
ci/src/: main.rs
src/: config.rs  index.d.ts  index.ts  lib.rs  main.rs
src/domain/: acmi.rs  acmi_file.rs  mod.rs  real_time_telemetry.rs
src/handlers/: mod.rs  stormworks.rs
src/infra/: acmi.ts  acmiFile.ts  acmi_file.rs  mod.rs  realTimeTelemetry.ts  real_time_telemetry.rs
src/repository/: acmi.ts  acmiFile.ts  realTimeTelemetry.ts
src/server/: http.rs  http_simple.rs  mod.rs  tcp.rs
tests/: integration_tests.rs
