[package]
name = "stormworks-tacview"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "time",
    "macros",
    "signal",
    "sync",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
tempfile = "3.0"
base64ct = "=1.6.0" # Pin to specific older version
sha2 = "0.10.8" # Pin to avoid base64ct v1.8.0 dependency  
password-hash = "0.4.2" # Pin to avoid base64ct v1.8.0 dependency
pbkdf2 = "0.11.0" # Pin to avoid base64ct v1.8.0 dependency
serde_yaml = "0.9"
dirs = "5.0"
base64 = "0.21"
hyper = { version = "0.14", features = ["server", "http1"] }

[dev-dependencies]

[workspace]
members = [".", "ci"]
